[package]
name = "tg-group-queue-bot"
version = "0.1.0"
authors = ["maxhha <devmaxhha@gmail.com>", "migregal <devgregorymironov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.48"
teloxide = { version = "0.4", features = ["macros", "auto-send"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
mongodb = "2.0.0-alpha"
tokio-compat-02 = "0.2.0"
ring = "0.16.20"
data-encoding = "2.3.2"
